# dougal-workstream-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.codex/: session-summary.md
docs/: cross-agent-coordination.md  mcpgw-vm-deployment.md  public-proxy-contract.md
examples/: codex-session-summary-native.json  codex-session-summary.md  codex-session.json  handoff.json  mark-events-consumed.json  nginx-stack-codex-prompt.md  openclaw-recent-changes.json  session-handoff-native.json  start-session-brief.md
src/workstream_mcp/: __init__.py  _version.py  app_tools.py  auth.py  cli.py  config.py  db.py  export.py  prompts.py  resources.py  safety.py  schema.py  server.py  tools.py  ui_resources.py
tests/: test_workstream.py
